fix: expand automatic nickname word lists